Fix overlapping of some content by scrollbar.

--- a/chess-client/app/_/layout.scss
+++ b/chess-client/app/_/layout.scss
@@ -7,7 +7,3 @@
 
     background-color: colors.$background;
 }
-
-body {
-    margin: 0;
-}
